fastapi_service_dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-k8s-service
spec:
  type: LoadBalancer
  selector:
    app: fastapi-k8s-deployment-label
  ports:
    - port: 7000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-k8s-deployment
#  labels:
#    app: fastapi-k8s-deployment-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-k8s-deployment-label
  template:
    metadata:
      labels:
        app: fastapi-k8s-deployment-label
    spec:
      containers:
        - name: fastapi-k8s
          image: pvvsdoc001/fastapi-k8s:2.0.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
